--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "vue": "^2.5.16",
     "vue-awesome": "^2.3.8",
     "vue-loader": "14.2.2",
+    "vue-moment": "^4.0.0",
     "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.5.16",
-    "vue-turbolinks": "^2.0.3"
+    "vue-turbolinks": "^2.0.3",
+    "vue2-datepicker": "^2.4.0",
+    "vuejs-datepicker": "^1.5.2"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
